--- a/public/index.html
+++ b/public/index.html
@@ -28,7 +28,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@300;400&display=swap" rel="stylesheet">
+
     <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%REACT_APP_KAKAOMAP_KEY%&libraries=services,clusterer,drawing"></script>
+
+    <!-- iamport.payment.js v1버전 -->
+    <script src="https://cdn.iamport.kr/v1/iamport.js"></script>
+
   </head>
   <body style="background-color: rgba(248, 248, 248, 1);">
     <noscript>You need to enable JavaScript to run this app.</noscript>
